More GPU Errors #45590

Closed
opened 2015-07-28 15:13:32 +02:00 by Aaron Carlisle · 4 comments
Member

System Information
Windows 8.0
Intel HD 4600

Blender Version
Broken: 2.73

Short description of error

GPU failed to find function node_bsdf_refraction
GPU failed to find function node_ambient_occlusion
GPUShader: compile error:
WARNING: 1:3: '#extension' :  'GL_EXT_gpu_shader4' is not supported
ERROR: 4:83: 'node_subsurface_scattering' : no matching overloaded function found (using implicit conversion)

The GPU failed to find function node_bsdf_refraction error was fixed earlier today with cd324654b0 but found some more today

Exact steps for others to reproduce the error
Switch to material view

gpu.blend

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 2.73 **Short description of error** ``` GPU failed to find function node_bsdf_refraction GPU failed to find function node_ambient_occlusion GPUShader: compile error: WARNING: 1:3: '#extension' : 'GL_EXT_gpu_shader4' is not supported ERROR: 4:83: 'node_subsurface_scattering' : no matching overloaded function found (using implicit conversion) ``` The `GPU failed to find function node_bsdf_refraction` error was fixed earlier today with cd324654b0 but found some more today **Exact steps for others to reproduce the error** Switch to material view [gpu.blend](https://archive.blender.org/developer/F214440/gpu.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 971affb436

This issue was referenced by 971affb4366634da35a7d9637243d451f0b227e2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45590
No description provided.