Fix T45590: Some more missing glsl functions

Also SSS node was using wrong Normal input index.