source/blender/nodes/shader/nodes/node_shader_subsurface_scattering.c
@@ -60,8 +60,8 @@ static void node_shader_init_subsurface_scattering(bNodeTree *UNUSED(ntree), bNo
 
 static int node_shader_gpu_subsurface_scattering(GPUMaterial *mat, bNode *UNUSED(node), bNodeExecData *UNUSED(execdata), GPUNodeStack *in, GPUNodeStack *out)
 {
-	if (!in[1].link)
-		in[1].link = GPU_builtin(GPU_VIEW_NORMAL);
+	if (!in[5].link)
+		in[5].link = GPU_builtin(GPU_VIEW_NORMAL);
 
 	return GPU_stack_link(mat, "node_subsurface_scattering", in, out);
 }
